--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
       <!-- Slide 1 -->
       <div class="carousel-item active">
         <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Crownvalz</span></h2>
-          <p class="animate__animated animate__fadeInUp">We offer a range of services to meet your digital needs, including website designing, research consultation, and tech advisory. Let's work together to achieve your goals.</p>
+          <h2 class="animate__animated animate__fadeInDown">Generate your <span>CV now</span></h2>
+          <p class="animate__animated animate__fadeInUp">We offer a range of services to meet your digital needs, including CVs generation for free, website designing, research consultation, and tech advisory. Let's work together to achieve your goals.</p>
           <a href="cvgen.html" class="btn-get-started animate__animated animate__fadeInUp scrollto">Generate Free CV</a>
         </div>
       </div>
@@ -85,7 +85,7 @@
         <div class="carousel-container">
           <h2 class="animate__animated animate__fadeInDown">Website Designing</h2>
           <p class="animate__animated animate__fadeInUp">Our website designing services are tailored to your specific needs. We create beautiful and functional websites that leave a lasting impression.</p>
-          <a href="newloan.html" class="btn-get-started animate__animated animate__fadeInUp scrollto">Apply Loan</a>
+          <a href="newloan.html" class="btn-get-started animate__animated animate__fadeInUp scrollto">See Sample designs</a>
         </div>
       </div>
   
@@ -94,7 +94,7 @@
             <div class="carousel-container">
               <h2 class="animate__animated animate__fadeInDown">Research Consultation</h2>
               <p class="animate__animated animate__fadeInUp">Our research consultation services provide valuable insights and data-driven solutions for your business or projects. Let's work together for success.</p>
-              <a href="newloan.html" class="btn-get-started animate__animated animate__fadeInUp scrollto">Apply Loan</a>
+              <a href="newloan.html" class="btn-get-started animate__animated animate__fadeInUp scrollto">See more</a>
             </div>
           </div>
       
@@ -102,6 +102,15 @@
           <div class="carousel-item">
             <div class="carousel-container">
               <h2 class="animate__animated animate__fadeInDown">Tech Advisory</h2>
+              <p class="animate__animated animate__fadeInUp">Our tech advisory services help you navigate the complex world of technology, making informed decisions for your business's growth and success.</p>
+              <a href="newloan.html" class="btn-get-started animate__animated animate__fadeInUp scrollto">Tech Advisory</a>
+            </div>
+          </div>
+
+          <!-- Slide 2 (You can add more slides if needed) -->
+          <div class="carousel-item">
+            <div class="carousel-container">
+              <h2 class="animate__animated animate__fadeInDown">Loan Calculator</h2>
               <p class="animate__animated animate__fadeInUp">Our tech advisory services help you navigate the complex world of technology, making informed decisions for your business's growth and success.</p>
               <a href="newloan.html" class="btn-get-started animate__animated animate__fadeInUp scrollto">Apply Loan</a>
             </div>
@@ -134,7 +143,7 @@
     </section><!-- End bravo -->
 
 
-  <main id="main">
+<main id="main">
 
 <!-- ======= Our Services Section ======= -->
 <section id="services" class="services">
@@ -150,52 +159,50 @@
         <div class="icon-box">
           <div class="icon"><i class="bx bxl-dribbble"></i></div>
           <h4 class="title"><a href="#">Website Designing</a></h4>
-          <p class="description">We create stunning and functional websites that leave a lasting impression on your audience.</p>
-          <a class="btn btn-primary" href="assets/calclator.xlsx" download>
-            <img src="assets/img/wordlogo.svg" alt="Excel Logo" width="24" height="24">
-            Download
-          </a>
-        </div>
-      </div>
-
-      <div class="col-md-3 d-flex align-items-stretch mb-5 mb-lg-0">
-        <div class="icon-box">
-          <div class="icon"><i class="bx bx-table"></i></div>
-          <h4 class="title"><a href="#">Tech Advisory</a></h4>
-          <p class="description">Navigate the complex world of technology with our advisory services for business growth and success.</p>
-          <a class="btn btn-primary" href="assets/calclator.xlsx" download>
-            <img src="assets/img/wordlogo.svg" alt="Excel Logo" width="24" height="24">
-            Download
-          </a>
-        </div>
-      </div>
-
-      <div class="col-md-3 d-flex align-items-stretch mb-5 mb-lg-0">
-        <div class="icon-box">
-          <div class="icon"><i class="bx bx-pin"></i></div>
-          <h4 class="title"><a href="#">Tech Advisory</a></h4>
-          <p class="description">Navigate the complex world of technology with our advisory services for business growth and success.</p>
-          <a class="btn btn-primary" href="assets/calclator.xlsx" download>
+          <p class="description">Download this template for free and experience highly advanced automation features.</p>
+          <a class="btn btn-primary" href="assets/hide_formurar.xlsx" download>
             <img src="assets/img/excellogo.png" alt="Excel Logo" width="24" height="24">
             Download
           </a>
         </div>
       </div>
 
-      <div class="col-md-3 d-flex align-items-stretch mb-5 mb-lg-0">
-        <div class="icon-box">
-          <div class="icon"><i class="bx bx-tachometer"></i></div>
-          <h4 class="title"><a href="#">Tech Advisory</a></h4>
-          <p class="description">Navigate the complex world of technology with our advisory services for business growth and success.</p>
-          <a class="btn btn-primary" href="assets/calclator.xlsx" download>
-            <img src="assets/img/excellogo.png" alt="Excel Logo" width="24" height="24">
-            Download
-          </a>
+        <div class="col-md-3 d-flex align-items-stretch mb-5 mb-lg-0">
+          <div class="icon-box">
+            <div class="icon"><i class="bx bxl-dribbble"></i></div>
+            <h4 class="title"><a href="#">Website Designing</a></h4>
+            <p class="description">Download this template for free and experience highly advanced automation features.</p>
+            <a class="btn btn-primary" href="assets/lockformular.xlsx" download>
+              <img src="assets/img/excellogo.png" alt="Excel Logo" width="24" height="24">
+              Download
+            </a>
+          </div>
+        </div>
+
+        <div class="col-md-3 d-flex align-items-stretch mb-5 mb-lg-0">
+          <div class="icon-box">
+            <div class="icon"><i class="bx bxl-dribbble"></i></div>
+            <h4 class="title"><a href="#">Website Designing</a></h4>
+            <p class="description">Download this template for free and experience highly advanced automation features.</p>
+            <a class="btn btn-primary" href="assets/vlookup.xlsx" download>
+              <img src="assets/img/excellogo.png" alt="Excel Logo" width="24" height="24">
+              Download
+            </a>
+          </div>
+        </div>
+
+        <div class="col-md-3 d-flex align-items-stretch mb-5 mb-lg-0">
+          <div class="icon-box">
+            <div class="icon"><i class="bx bxl-dribbble"></i></div>
+            <h4 class="title"><a href="#">Website Designing</a></h4>
+            <p class="description">Download this template for free and experience highly advanced automation features.</p>
+            <a class="btn btn-primary" href="assets/calclator.xlsx" download>
+              <img src="assets/img/excellogo.png" alt="Excel Logo" width="24" height="24">
+              Download
+            </a>
+          </div>
         </div>
       </div>
-
-    </div>
-
   </div>
 </section><!-- End Our Services Section -->
 
@@ -381,7 +388,7 @@
 
         <div class="row portfolio-container">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -395,7 +402,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -409,7 +416,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-3.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -423,7 +430,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-4.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -437,7 +444,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-5.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -451,7 +458,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-6.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -465,7 +472,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-7.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -479,7 +486,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-8.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -493,7 +500,35 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-9.jpeg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Web 3</h4>
+                <p>Web</p>
+              </div>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-9.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-8.jpeg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Card 3</h4>
+                <p>Card</p>
+              </div>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-8.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-9.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -515,7 +550,6 @@
     <!-- ======= Our Team Section ======= -->
     <section id="team" class="team">
       <div class="container">
-
         <div class="section-title">
           <h2>Our Team</h2>
           <p>Meet the experts behind <span>Your Company Name</span>. We are a team of professionals passionate about delivering high-quality website designing, research consultation, and tech advisory services. Get to know the faces that drive our success.</p>
