--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -129,16 +129,16 @@
               <h3>Product information</h3>
               <ul>
                 <li><strong>Category</strong>: Accesories</li>
-                <li><strong>Client</strong>: Godfrey Abraham</li>
+                <li><strong>Client</strong>: Crownvalz tech</li>
                 <li><strong>Product date</strong>: 01 March, 2025</li>
                 <li><strong>Product URL</strong>: <a href="https://crownvalz.github.io/Abraham/">www.crownvalztech.com</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
-              <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
-              </p>
+              <h4>CVs templetes</h4>
+              <p style="text-align: justify;">
+                This webpage helps create CVs online. Users enter personal details, work experience, education, and skills using an easy interface. The webpage then arranges this information into a professional CV format. It offers various templates and customization options for the CV's appearance. It simplifies the process of making a tailored CV for job applications or professional use.
+            </p>
             </div>
           </div>
 
@@ -197,7 +197,7 @@
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <p>This webpage helps create CVs online. Users enter personal details, work experience, education, and skills using an easy interface. The webpage then arranges this information into a professional CV format.</p>
             <form action="" method="post">
               <input class="" type="email" name="email"><input type="submit" value="Subscribe">
             </form>
