--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
   <div class="container">
 
     <div class="section-title">
-      <h2>Pick Your favourite</h2>
+      <h2>Products</h2>
       <p>
         We offer a range of services to meet your digital needs, including CVs generation for free, website designing, research consultation, and tech advisory. Let's work together to achieve your goals.</p>
     </div>
@@ -586,13 +586,13 @@
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/products/product1.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>App 1</h4>
                 <p>App</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/products/product1.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
